# neural-os-core

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMERCIAL.md  Cargo.toml  README.md  SUMMARY.md  disk.vhd  neural-os-hwtest.img  run-qemu.ps1  rust-toolchain.toml
.cargo/: config.toml
.cursor/rules/: 000-consulte-idea-bank.mdc
crates/agent-core/: Cargo.toml
crates/event-bus/: Cargo.toml
crates/neural-kernel/: Cargo.toml  micro.bitnet
crates/neural-kernel/src/: acpi.rs  agency.rs  agency_importer.rs  agents.rs  allocator.rs  apic.rs  ata.rs  bench.rs  browser_agent.rs  chunker.rs  conversation.rs  cortex.rs  cron.rs  delta.rs  dma.rs  e1000.rs  fat.rs  gguf.rs  hal.rs  hermes.rs  hw_agents.rs  identity.rs  interrupts.rs  inventory.rs  main.rs  mcp.rs  memory.rs  mhi.rs  mmio.rs  net.rs  netstack.rs  network_agent.rs  nn.rs  optimizer.rs  orchestrator.rs  pci.rs  plugin_hub.rs  profile.rs  proto.rs  rtl8139.rs  (+25 more)
crates/neural-kernel/src/agents/: mouse_agent.rs
crates/neural-kernel/src/apps/: hermes_app.rs  mod.rs  power_app.rs  settings_app.rs
crates/neural-kernel/src/display/: agent.rs  compositor.rs  console.rs  fb.rs  font.rs  icons.rs  layout.rs  mod.rs  notifications.rs  theme.rs  workspace.rs
crates/neural-kernel/src/fs/: ata_agent.rs  dev_fs_agent.rs  hermes_fs_agent.rs  inference_fs_agent.rs  mhi_scheduler.rs  mod.rs  proc_fs_agent.rs  ram_fs_agent.rs
crates/neural-kernel/src/gpu/: amd.rs  backend.rs  cube.rs  detect.rs  intel.rs  mod.rs  nvidia.rs  vram.rs
crates/neural-kernel/src/smp/: mod.rs  percpu.rs  trampoline.rs
crates/neural-kernel/src/sync/: irq_lock.rs  mod.rs  ticket_lock.rs
crates/neural-kernel/src/task/: agent.rs  executor.rs  mod.rs
crates/neural-kernel/src/vfs/: mod.rs  path.rs
crates/skill-registry/: Cargo.toml
crates/ticket-lock/: Cargo.toml
docs/: ATTRIBUTIONS.md  TODO.md  roadmap.md  sprint-060-correction-plan.md  sprint-061-desktop.md  sprint-062-fs.md  sprint-063-cortex-evolution.md  sprint-063-www.md  sprint-066-gpu.md  sprint-067-auto-skills.md
docs/architecture/: 0001-initial-architecture-and-toolchain.md  0002-vga-and-serial-logging.md  0003-interrupt-descriptor-table.md  0004-memory-paging-and-heap.md  0005-simd-and-fpu-enablement.md  0006-neural-primitives-and-libm.md  0007-intent-router-mlp.md  0009-pic-watchdog-and-page-fault.md  (+22 more)
skills/: hw_identify.md  self_heal.md
src/: allocator.rs  interrupts.rs  main.rs  memory.rs  nn.rs  tensor.rs  vga_buffer.rs
tools/: build_image.py  gen_micro_model.py  hw_knowledge.jsonl  micro_trained.bitnet  patch_image.py  prepare_hw_dataset.py  setup-hyperv.ps1  train_hw_model.py
(+71 files in other folders)
