[package]
name = "neural-kernel"
version = "0.59.0-test"
edition = "2021"

[dependencies]
bootloader_api = "0.11.15"
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
uart_16550 = "0.2"
x86_64 = "0.14.11"
linked_list_allocator = "0.9"
libm = "0.2"
pic8259 = "0.10"
event-bus = { path = "../event-bus" }
skill-registry = { path = "../skill-registry" }
ticket-lock = { path = "../ticket-lock" }
smoltcp = { version = "0.13", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "socket-tcp", "socket-udp", "socket-dhcpv4", "proto-dhcpv4", "socket-dns", "proto-dns"] }
agent-core = { path = "../agent-core" }
ed25519-compact = { version = "2", default-features = false }
embedded-graphics = { version = "0.8.2", default-features = false }

[build-dependencies]
# bootloader 0.11 gere o build via disco virtual (.UEFI/.BIOS)
# Nao precisa mais de build-dependency bootloader

[package.metadata.bootimage]
run-args = ["-m", "2G", "-serial", "stdio", "-nic", "user,model=rtl8139", "-smp", "2", "-accel", "whpx"]
